# erpnext-ai-forge

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PROJECT-STATUS.md  README.md  forge.config.yaml
.github/workflows/: ci.yml
adapters/antigravity/: README.md  adapter.yaml
adapters/claude-code/: README.md  adapter.yaml
adapters/cline/: README.md  adapter.yaml
adapters/codex/: README.md  adapter.yaml
adapters/copilot/: README.md  adapter.yaml
adapters/cursor/: README.md  adapter.yaml
adapters/opencode/: README.md  adapter.yaml
canonical/agents/: architect.md  backend-specialist.md  devops-deployment.md  frontend-frappe-ui-specialist.md  frontend-quasar-specialist.md  integrations-specialist.md  qa-test-engineer.md  (+1 more)
discovery/: INVENTORY.md
docs/: how-it-works.md  incident-response.md  onboarding.md
forge/: pyproject.toml
forge/src/forge/: __init__.py  audit.py  cli.py  commit_helper.py  deprecate.py  discover_bench.py  drift.py  loader.py  manifest.py  models.py  render.py  scoring.py  settings_merge.py  stats.py  sync.py
forge/src/forge/commands/: __init__.py  audit.py  commit.py  discover.py  render.py  score.py  stats.py  sync.py  test.py  validate.py
forge/tests/: conftest.py  test_adapters.py  test_audit.py  test_cli_integration.py  test_cli_smoke.py  test_commit_helper.py  test_deprecate.py  test_discover_bench.py  test_drift.py  test_loader.py  test_manifest.py  test_render.py  test_scoring.py  test_security_gate.py  test_settings_merge.py  test_stats.py
(+93 files in other folders)
