[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "erpnext-ai-forge CLI — render canonical AI agent specs into per-tool configs"
readme = "../README.md"
license = { text = "Proprietary" }
authors = [{ name = "Muhammad Tayyab", email = "m.tayyab9736@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.7.0",
    # sqlglot for `mariadb-query` parser fallback (v0.2 Decision B5)
    "sqlglot>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
